spade-tests/src/snapshots/spade_tests__hir_lowering__tests__reg_binding_inout_produes_error.snap
---
source: spade-tests/src/hir_lowering.rs
---
entity consumer(#[no_mangle] t: inout<int<8>>) __builtin__

entity test(clk: clock, #[no_mangle] t: inout<int<8>>) {
    reg(clk) t_ = t;
    inst consumer(t_)
}

error: Values of inout type cannot be bound to names
  ┌─ testinput:4:14
  │
4 │     reg(clk) t_ = t;
  │              ^^ inout type bound to name
  │
  = help: inout values can only be passed along to other modules


